--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,4 @@
-services:
-  - type: worker
-    name: saahil-crypto-bot
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python index.py
+pyTelegramBotAPI
+Flask
+requests
+numpy
