--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,6 @@
-services:
-  - type: web
-    name: saahilcryptobot
-    env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python index.py
+type: web
+env: python
+buildCommand: pip install -r requirements.txt
+startCommand: python index.py
+
 
