--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: saahilcryptobot
     env: python
     plan: free
+    pythonVersion: 3.11
     buildCommand: pip install -r requirements.txt
     startCommand: python index.py
     envVars:
       - key: PORT
         value: 10000
+
 
 
