--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-setuptools>=68.0.0
+setuptools>=65.0.0
 wheel
-pyTelegramBotAPI==4.13.0
-Flask==2.2.5
-pandas==2.0.3
-numpy==1.25.2
-requests==2.32.1
+requests
+pyTelegramBotAPI
+flask
+pandas
+numpy
+
 
 
